...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#888888"
                android:layout_weight="1" />
            <ImageView
                android:id="@+id/edit_cook_time"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/edit_icon"
                android:contentDescription="@string/edit_cook_time"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#888888"
                android:layout_weight="1" />
            <ImageView
                android:id="@+id/edit_serving_size"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/edit_icon"
                android:contentDescription="@string/edit_yield"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true" />
...
                android:layout_toEndOf="@id/shopForButton"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp" />

            <!-- Delete Icon -->
            <ImageView
                android:id="@+id/delete_recipe_ingredient"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_ingredients"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp" />

            <!-- Edit Icon -->
            <ImageView
                android:id="@+id/edit_recipe_ingredient"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/edit_icon"
                android:contentDescription="@string/edit_ingredients"
                android:layout_toStartOf="@id/delete_recipe_ingredient"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" />

            <!-- Add Icon -->
            <ImageView
                android:id="@+id/add_recipe_ingredient"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/upload_icon"
                android:contentDescription="@string/add_ingredients"
                android:layout_toStartOf="@id/edit_recipe_ingredient"
                android:layout_centerVertical="true"
...
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp" />

            <!-- Edit Icon -->
            <ImageView
                android:id="@+id/edit_instruction"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/edit_icon"
                android:contentDescription="@string/edit_instructions"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="8dp"
...
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp" />

            <!-- Delete Icon -->
            <ImageView
                android:id="@+id/deleteTagButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/delete_icon"
                android:contentDescription="@string/delete_tags"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp" />

            <!-- Add Icon -->
            <ImageView
                android:id="@+id/addTagButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/upload_icon"
                android:contentDescription="@string/add_tags"
                android:layout_toStartOf="@id/deleteTagButton"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" />
        </RelativeLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/tagsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:paddingStart="0dp"
            android:paddingEnd="16dp"
...
