...
        android:text="@string/add_ingredients_to_recipe"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/itemNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_name"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/itemQuantityText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/itemUnitText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unit"
        android:layout_marginBottom="0dp" />

    <!-- Dietary Tags -->
...
            android:layout_height="wrap_content"
            android:text="@string/gluten_free"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_ingredient" />

    <Button
        android:id="@+id/doneButton"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />
</LinearLayout>

