...
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp" />
    </RelativeLayout>

    <!-- Instruction Input -->
    <EditText
        android:id="@+id/instructionEditText"
        android:hint="@string/new_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Add Button -->
    <Button
...
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_height="wrap_content" />

    <!-- Edit Button -->
    <Button
        android:id="@+id/editButton"
        android:text="@string/edit_instruction"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_height="wrap_content" />

...
