...
        android:id="@+id/itemNameText"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:hint="@string/ingredient_name" />

    <Button
        android:id="@+id/deleteButton"
        android:text="@string/delete_ingredient"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <Button
...
